force-app/main/default/objects/AI_Configuration__mdt/AI_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>AI Configuration</label>
    <pluralLabel>AI Configurations</pluralLabel>
</CustomObject>