force-app/main/default/objects/AI_Configuration__mdt/fields/Enable_Audit_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Audit_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Audit Logging</label>
    <type>Checkbox</type>
</CustomField>