force-app/main/default/objects/AI_Configuration__mdt/fields/MCP_Enabled__c.field-meta.xml
<CustomField>
    <fullName>MCP_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCP Enabled</label>
    <type>Checkbox</type>
</CustomField>