force-app/main/default/objects/AI_Configuration__mdt/fields/MCP_Endpoint_Name__c.field-meta.xml
<CustomField>
    <fullName>MCP_Endpoint_Name__c</fullName>
    <label>MCP Endpoint Name</label>
    <type>TextArea</type>
</CustomField>